--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,14 @@
 <head>
 <meta charset="utf-8">
 <title>Work Scout</title>
+<base href="/">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
 <!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-
 </head>
-
 <body>
 <body>
   <app-root></app-root>
-
-
 </body>
 </html>
